# belvo-financial-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  EVAL_PLAN.md  SPEC.md  TASKS.md
docs/skills/: accounts_schema.md  balances_semantics.md  filtering_rules.md  open_finance_overview.md  owners_schema.md  safety_read_only.md  transactions_schema.md
evals/: questions.yaml
src/belvo_finance_agent/: __init__.py  agent.py  app_streamlit.py  charts.py  config.py  eval_runner.py  finance_workflows.py  heuristics.py  mcp_client.py  mcp_probe.py  models.py  response_polisher.py  schema_context.py  streaming.py
tests/: conftest.py  test_bonus_features.py  test_finance_workflows.py  test_heuristics.py  test_mcp_client.py  test_read_only_scope.py  test_response_polisher.py  test_transaction_filters.py
