[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "belvo-finance-agent"
version = "0.1.0"
description = "Read-only financial specialist agent for Belvo's Open Finance MCP take-home challenge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "altair>=5.0",
  "anthropic>=0.54",
  "httpx>=0.27",
  "pandas>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "streamlit>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
belvo-mcp-probe = "belvo_finance_agent.mcp_probe:main"
belvo-eval = "belvo_finance_agent.eval_runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
